<resources>
    <string name="app_name">ToDoApp</string>
    <string name="action_settings">Settings</string>
    <string name="tasks">Your tasks</string>
    <string name="title_activity_new_task">NewTaskActivity</string>
    <string name="task_summary">Task summary</string>
    <string name="task_due_date">Task due date</string>
    <string name="task_description">Task description</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="menu_delete">Delete task</string>
    <string name="menu_save">Save task</string>
    <string name="confirm_delete_message">Task will be permanently deleted</string>
    <string name="confirm_delete_tittle">Are you sure?</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="summary_info_title">Task summary is incorrect</string>
    <string name="summary_empty_message">Task summary can not be empty</string>
    <string name="summary_exist_message">Task summary has to be unique</string>
    <string name="ok_button">Ok</string>
    <string name="invalid_query_uri">Query error</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="task_filtering_label">Task filtering</string>
    <string name="show_all_tasks">Show all</string>
    <string name="show_open_tasks">Show open tasks</string>
    <string name="show_closed_tasks">Show closed tasks</string>
    <string name="show_today_tasks">Show today tasks</string>

    <string name="task_sorting_label">Task sorting</string>
    <string name="sort_by_priority">Sort by priority</string>
    <string name="sort_by_date">Sort by due date</string>




</resources>
