<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
    <item android:title="@string/task_filtering_label">
        <menu>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/show_all"
            android:icon="@drawable/ic_menu_all"
            android:title="@string/show_all_tasks"/>
        <item
            android:id="@+id/show_open"
            android:icon="@drawable/ic_menu_open"
            android:title="@string/show_open_tasks"/>
        <item
            android:id="@+id/show_done"
            android:icon="@drawable/ic_menu_done"
            android:title="@string/show_closed_tasks"/>
        <item
            android:id="@+id/show_today"
            android:icon="@drawable/ic_menu_today"
            android:title="@string/show_today_tasks"/>
    </group>
            </menu>
    </item>


    <item android:title="@string/task_sorting_label">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/sort_priority"
                android:icon="@drawable/ic_menu_priority"
                android:title="@string/sort_by_priority"/>
            <item
                android:id="@+id/sort_date"
                android:icon="@drawable/ic_menu_date"
                android:title="@string/sort_by_date"/>
            </group>
        </menu>
    </item>
    </group>

</menu>
